added some more basic functionality. Beware, window is dysfunctional.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
+#@Author: Teodor Tysklind // Teodor.Tysklind@FutureGames.nu
+
 cmake_minimum_required(VERSION "3.21.3")
 
 project("SnakeSDL")
 
-add_executable("${PROJECT_NAME}" "main.cpp")
+add_executable("${PROJECT_NAME}" "main.cpp" "map.cpp")
 
 add_subdirectory(external/SDL)
 
